app/ng-weekly-scheduler.less
@handleWidth: 5%;
@headerRowHeight: 15px;
@offset: 5px;
@rowHeight: 28px;

@backgroundColor: #fff;
@darkBackgroundColor: #1c1c1c;

@borderColor: #ddd;
@darkBorderColor: #777;

@borderStyle: solid;
@borderWidth: 1px;

@stripeColor: #f6f6f6;
@darkStripeColor: #333;

@border: @borderWidth @borderStyle @borderColor;
@darkBorder: @borderWidth @borderStyle @darkBorderColor;

@red: rgb(200, 25, 25);

.applyTheme(@backgroundColor, @borderColor, @stripeColor, @textColor) {
  @border: @borderWidth @borderStyle @borderColor;

  background: @backgroundColor;
  border-left: @border;
  border-right: @border;
  border-top: @border;
  color: @textColor;

  br-hourly-grid {
    div {
      border-right: @border;
    }
  }

  br-multi-slider {
    br-weekly-slot {
      &.active {
        box-shadow: 0px 0px 2px 2px @textColor;
      }

      &.nullEnd {
        background: linear-gradient(to right, currentColor, fade(@backgroundColor, 50%));
      }

      span {
        color: #fff;
      }
    }
  }

  .labels {
    border-right: @border;
  }

  .striped > div:nth-child(even) {
    background-color: @stripeColor;
  }
  
  .srow {
    border-bottom: @border;
  }

  .timestamps {
    div {
      border-width: 2px;

      &:hover {
        background-color: @stripeColor;
      }
    }
  }
}

br-weekly-scheduler {
  .applyTheme(@backgroundColor, @borderColor, @stripeColor, @darkBackgroundColor);
  display: block;
  margin-bottom: 10px;
  
  .buttons {
    div {
      display: inline-block;
    }
  }

  /* The dark class will be applied by a client on the outside of this component */
  .dark & {
    .applyTheme(@darkBackgroundColor, @darkBorderColor, @darkStripeColor, @backgroundColor);
  }

  .labels {
    display: block;
    float: left;
    text-align: center;
    
    .dummy {
      height: @headerRowHeight;
    }

    .srow {
      padding: 0 5px;
    }
  }
  
  br-schedule-area-container {
    display: block;
    overflow-x: auto;

    /** Practical effect of "start zoomed if the screen is below this width" */
    .schedule-area {
      min-width: 600px;
    }
  }

  .srow {
    position: relative;
    height: @rowHeight;
    line-height: @rowHeight;

    &.buttons {
      height: auto;
    }

    &.explanations {
      padding-left: @offset;

      &.violation {
        color: red;
      }
    }
  }

  .calendar {
    display: table;
    table-layout: fixed;
    position: relative;
    width: 100%;
  }

  .timestamps {
    display: table;
    font-size: 0.6em;
    font-weight: bold;
    line-height: @headerRowHeight;
    height: @headerRowHeight;
    table-layout: fixed;
    text-transform: uppercase;
    width: 100%;

    div {
      overflow: hidden;
      padding-left: 2px;
      text-overflow: clip;

      &:hover {
        cursor: pointer;
      }
    }
  }
}

br-hourly-grid {
  display: table-row;

  div {
    box-sizing: border-box;
    display: table-cell;
    height: 100%;
  }

  .interval {
    display: block;
    float: left;
  }
}

br-multi-slider {
  @topOffset: @offset;
  @bottomOffset: @offset;
  @lineHeight: @rowHeight - @topOffset - @bottomOffset;

  height: 100%;
  top: 0;
  position: absolute;
  width: 100%;

  .slot {
    position: absolute;
    top: @topOffset;
    bottom: @bottomOffset;
    border-radius: 3px;
    text-align: center;
    white-space: nowrap;
    line-height: @lineHeight;

    &.nullEnd {
      text-align: left;
    }
  }

  .ghost {
    background: #5ab57a;
    opacity: 0.6;
    display: none;
    cursor: pointer;
    color: #fff;
    user-select: none;
  }

  &:hover {
    .ghost {
      display: block;
    }
  }

  br-time-range {
    display: block;
    width: 100%;
  }

  br-weekly-slot {
    -webkit-transition: background 0.1s ease-in;
    cursor: all-scroll;

    /**
     * We want to set the COLOR on any item we want to have a custom background color for.
     * This is because the gradient backgrounds for allowNulls rely on currentColor.
     * The text color within is set using a more specific selector
     */
    @bgColor: #2e81e1;
    background: @bgColor;
    color: @bgColor;

    user-select: none;

    &.disable {
      cursor: not-allowed;
      color: #666;
      background: #c0c0c0;
    }

    &.pending {
      background-color: rgb(200, 25, 25);
    }

    .handle {
      position: absolute;
      top: 0;
      bottom: 0;

      &.left, &.right {
        min-width: 4px;
        width: @handleWidth;
        background: #000;
        cursor: col-resize;
        opacity: 0.4;
      }
    }

    &.disable {
      .handle {
        cursor: not-allowed;
      }
    }

    .middle {
      overflow: hidden;
      padding: 0 4px;
      font-family: monospace;
      font-size: x-small;
      text-overflow: ellipsis;
    }

    .handle {
      &.left:hover, &.right:hover {
        opacity: 0.3;
      }

      &.left {
        left: 0;
      }

      &.right {
        right: 0;
      }
    }

    &.active {
      font-weight: bolder;
      z-index: 10;
    }
  }
}

.grid-container {
  width: 100%;
  position: absolute;
  top: 0;
  bottom: 0;

  div {
    box-sizing: border-box;
    float: left;
    height: 100%;
    overflow: hidden;
    text-align: center;
  }
}

